--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,8 @@
     "multer": "^1.4.5-lts.1",
     "pluralize": "^8.0.0",
     "serverless-http": "^3.2.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
@@ -35,6 +37,8 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.9.0",
     "@types/pluralize": "^0.0.33",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "@types/uuid": "^10.0.0",
     "concurrently": "^9.1.0",
     "cpx": "^1.5.0",
